--- a/index.html
+++ b/index.html
@@ -3,10 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Online Interactive Quiz on Soccer">
+    <meta name="keywords" content="online soccer quiz, soccer trivia, soccer fun quiz">
+    <!-- Link to Logo icon -->
+    <link rel="icon" href="assets/images/soccer-logo.png">
+    <!-- Link to stylesheets -->
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Soccer Trivia </title>
 </head>
 <body>
+    <header>
+        <h1><a href="index.html" title="Link to Home Page (back to start)">Soccer Trivia</a></h1>
+    </header>
+    <main class="home">
+        <!-- Logo -->
+        <img src="assets/images/soccer-logo.png" alt="Soccer Trivia logo" class="logo">
+        <h2>Are You Up for the Challenge?</h2>
+        <!-- Username input and submit button -->
+        <form class="name-form">
+            <div class="username-container">
+                <label for="user-input" class="input-label">Create a Username</label><br>
+                <input id="user-input" type="text" name="username" title="Enter Username here"
+                    data-error="Username must have 3 or more characters" 
+                    aria-labelledby="user-input user-error" required>
+                <!-- Error Messages for Username Validation -->
+                <div class="feedback" aria-live="assertive" aria-relevant="additions removals"
+                    id="user-error"><p id="feedback"></p>
+                </div>
+            </div>            
+            <!-- Start Quiz Button -->
+            <div>
+                <input type="button" class="btn btn-start" value="Start Quiz"
+                    onclick="getUserName();">
+            </div>
+        </form>
+    </main>
+    <footer>
+
+    </footer>
+    <!-- Link to External JavaScript -->
     <script src="assets/js/script.js"></script>
 </body>
 </html>
