Add styles to home page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>            
             <!-- Start Quiz Button -->
             <div>
-                <input type="button" class="btn btn-start" value="Start Quiz"
+                <input type="button" class="btn btn-start" value="Let's Football"
                     onclick="getUserName();">
             </div>
         </form>
