Add styles to quiz play area

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </form>
     </main>
     <footer>
-
+        <p> Footer Text Goes Here</p>
     </footer>
     <!-- Link to External JavaScript -->
     <script src="assets/js/script.js"></script>
