--- a/quiz.html
+++ b/quiz.html
@@ -50,7 +50,7 @@
         </div>
     </main>
     <footer>
-        
+        <p> Footer Text Goes Here</p>
     </footer>
     <!-- Link to External JavaScript -->
     <script src="assets/js/script.js"></script>
