Add styles to play area

--- a/index.html
+++ b/index.html
@@ -43,5 +43,7 @@
     </footer>
     <!-- Link to External JavaScript -->
     <script src="assets/js/script.js"></script>
+    <!--Font Awesome Kit-->
+    <script src="https://kit.fontawesome.com/ceeefe180d.js" crossorigin="anonymous"></script>
 </body>
 </html>
