--- a/quiz.html
+++ b/quiz.html
@@ -71,6 +71,8 @@
         // Calls function to display only one quiz question and its answer options
         showExhibit(currentExhibit);
     </script>
+    <!--Font Awesome Kit-->
+    <script src="https://kit.fontawesome.com/ceeefe180d.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
