Add minor style changes to home page

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <h1><a href="index.html" title="Link to Home Page (back to start)">Soccer Trivia</a></h1>
+        <h1>Soccer Trivia</h1>
     </header>
     <main class="home">
         <!-- Logo -->
@@ -38,9 +38,6 @@
             </div>
         </form>
     </main>
-    <footer>
-        <p> Footer Text Goes Here</p>
-    </footer>
     <!-- Link to External JavaScript -->
     <script src="assets/js/script.js"></script>
     <!--Font Awesome Kit-->
